tdf#93716 sw: Use SwScriptInfo script changes for HTML export

The HTML filter used a custom script change scanner that deviated
significantly from Writer's behavior. This change updates the filter to
instead use the script change info that is already calculated by Writer.

Change-Id: I5e7597283aa84039e8d342bc454b71849313a171
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/205696
Tested-by: Jenkins
Reviewed-by: Jonathan Clark <jonathan@libreoffice.org>
(cherry picked from commit 0c3b4362b1b0c263671e3f5feab67585ac5ffb08)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/205812
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>